home/adguard/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: adguard
spec:
  selector:
    matchLabels:
      name: adguard
  template:
    metadata:
      labels:
        name: adguard
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      volumes:
        - name: work
          emptyDir: {}
        - name: conf
          emptyDir: {}
        - name: conf-ro
          configMap:
            name: adguard-config
      # adguard wants to write config
      containers:
        - name: adguard
          ports:
            - containerPort: 53
            - containerPort: 80
          image: docker.io/adguard/adguardhome
          volumeMounts:
            - mountPath: /opt/adguardhome/work
              name: work
            - mountPath: /opt/adguardhome/conf
              name: conf
