home/adguard/service-dns-tcp.yaml
kind: Service
apiVersion: v1
metadata:
  name: adguard-dns-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: adguard
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.53
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
  selector:
    name: adguard
