home/adguard/service-dns-udp.yaml
kind: Service
apiVersion: v1
metadata:
  name: adguard-dns-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: adguard
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.53
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
  selector:
    name: adguard
