home/adguard/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: adguard
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    name: adguard
